# lang-chain-101

./: .flake8  README.md  cspell.json  lang-chain-101.code-workspace  pyproject.toml
.devcontainer/: .env.template  devcontainer.json
src/01_setting/: 01_setting.ipynb
src/01_setting/python/: sample.py  sample_complete.py
src/02_model_io/: 02_model_io.ipynb
src/02_model_io/python/: chat_model_cache.py  chat_model_streaming.py  datetime_output_parser.py  language_model.py  list_output_parser.py  model_io_few_shot.py  model_io_llm.py  prompt.json  prompt.py  prompt_and_language_model.py  prompt_template_from_template_load_sample.py  prompt_template_from_template_save_sample.py  pydantic_output_parser.py
src/03_retrieval/: 03_retrieval.ipynb
