[tool.poetry]
name = "lang-chain-101"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.11"
openai = "^1.13.3"
pydantic = "^2.6.3"
langchain-openai = "^0.0.8"
langchain-anthropic = "^0.1.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
